project modal on ios cut off close button - fixed with scroll

--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -582,6 +582,7 @@
 		display: flex;
 		justify-content: space-between;
 		flex-grow: 1;
+		overflow-y: auto;
 
 		.projectTitle {
 			font-size: 1.5rem;
